SimpleComplex/Database 1.x, 2018-05-10
--------------------------------------
- MariaDb client: there's no means of getting native error until successful
  connection.
- NB: MySQLi multi-query isn't executed until getting result set.
- Classify native error codes, to discern connection|query|result error
  in places where ambiguous.

SimpleComplex/Database 1.x, 2018-05-06
--------------------------------------
- Result set index initial value -1.
  Native row fetching methods implicitly go to first result set; unless moved.
- Result nextSet/nextRow() shall optionally not throw exception on error.
- Query constructor must trim arg sql before checking for emptyness.
- Error message prefix is now Database[client name][rmdbs type][database name].
- Do NOT close statement/free result before getting native error.
- MariaDb query must have own nativeError() because \mysqli_stmt has own
  separate error list.
- Result fetchField method, which gets value; not column metadata.
- Aborted columnMetadata() method, because for Sqlsrv it's a query thing
  (sqlsrv_field_metadata(), no execution) whereas for MySQLi it's a result thing
  (mysqli_fetch_field()); and too much work anyway.

SimpleComplex/Database 1.x, 2018-05-03
--------------------------------------
- No custom LogicExceptions; logical exceptions should be detected during
  dev/test, and it's better that all (unexpected) database exceptions
  are/inherit from a single class (DbRuntimeException).
- (prepared statement) Prevent de-referencing when using an arguments list
  whose value buckets aren't set as &$value.
- MsSqlQuery case-insentive search for insert ID magic extra query.
- Readme MS SQL example must have certain options for providing affected rows
  and insert ID.
- Readme describe engines.

SimpleComplex/Database 1.x, 2018-05-02
--------------------------------------
- Parameter value escaper shan't escape semicolon, not even when multi-query.
- Result nextRow() is a result interface method.